--- a/index.html
+++ b/index.html
@@ -1,62 +1,124 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Registration Form</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Form Practice</title>
 </head>
 <body>
-	<div class="main"> 
-	<div class="register">
-	<h2>Register Here</h2> 
-	<form id="register" method="post">
-		<label>First Name :</label>
-		<br>
-		<input type="text" name="fname"
-		id="name" placeholder="Enter Your First Name">
+	<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Registration</title>
+</head>
+<body>
+	<form>
+	<h1 class="reg">Registration form</h1>
+	<div class="src">
+
+        <label>First Name:</label>
+        <br>
+		<input type="text" name="first name"
+		id="name" placeholder="enter your first name">
 		<br><br>
-	    <label>Last Name :</label>
-	    <br>
-	    <input type="text" name="lname"
-		id="name" placeholder="Enter Your Last Name">
+
+
+
+        <label>Last Name:</label>
+        <br>
+		<input type="text" name="last name"
+		id="name" placeholder="enter your last name">
 		<br><br>
-		<label>Your Age :</label>
-		<br>
+
+
+		
+		<label>Father Name:</label>
+        <br>
+		<input type="text" name="father name"
+		id="name" placeholder="enter your father name">
+		<br><br>
+
+
+
+		<label>Age:</label>
+        <br>
 		<input type="number" name="age"
-		id="name" placeholder="How old are you?">
+		id="name" placeholder="how old are you?">
 		<br><br>
-	    <label>Email :</label>
-	    <br>
-         <input type="email" name="email"
-		id="name" placeholder="Enter Your Valid Email">
+
+
+		<label>Password:</label>
+        <br>
+		<input type="password" name="password"
+		id="name" placeholder="enter your password">
 		<br><br>
-		<label>Gender :</label>
-		<br>
+
+
+		<label>Gender:</label>
+        <br>
 		<input type="radio" name="gender"
-		id="male">
-		<span id="male">Male</span>
+		id="male" >
+		<span id="male">male</span>
 		<input type="radio" name="gender"
-		id="female">
-		<span id="female">Female</span>
+		id="female" >
+		<span id="female">female</span>
 		<br><br>
-		<label>Known Language :</label>
+
+
+		<label>Email:</label>
+        <br>
+		<input type="email" name="email"
+		id="name" placeholder="enter your valid email">
+		<br><br>
+
+
+		<label>Massage:</label>
+        <br>
+        <textarea value="massage"></textarea>
+		<br><br>
+
+
+		<label>Hobbies:</label>
 		<br>
-		<input type="checkbox" name="lang"
-		id="hindi">
-		<span id="hindi">Hindi</span>
-		<input type="checkbox" name="lang"
-		id="english">
-		<span id="english">English</span>
+		<input type="checkbox" name="hobbies"
+		id="dancing">
+		<span id="dancing">Dancing</span>
+
+		<input type="checkbox" name="hobbies"
+		id="acting">
+		<span id="acting">Acting</span>
+
+		<input type="checkbox" name="hobbies"
+		id="painting">
+		<span id="painting">Painting</span>
+
+		<input type="checkbox" name="hobbies"
+		id="singing">
+		<span id="singing">Singing</span>
 		<br><br>
-		<input type="submit" value="submit"
-		name="submit" id="submit">
+
+
+		<button class="trp"><input type="submit" value="submit" 
+		name="submit" id="submit"></button> 
+		
+
+		
+
+       
 
 
 
 
-	</form>
 
+		
+
+
+		
 	</div>
-	</div>
+  </form>
+</body>
+</html>
 
 </body>
 </html>
